# cdn-regulation-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configs/: config.alloc-cdn-reg.ini  config.ini  config.non-reg.ini
scripts/: clear.sh  kill.sh  list.sh  notification.py  run-multi.sh  run.sh
src/: main.cpp
src/enums/: game_mode.h  tax_mode.h
src/headers/: cdn.fwd.h  config.fwd.h  region.fwd.h  service_provider.fwd.h
src/lib/: argument_parser.cpp  argument_parser.h  config.cpp  config.h  file_operator.cpp  file_operator.h  logger.cpp  logger.h  manager.cpp  manager.h
src/models/: best_response.cpp  best_response.h  cdn.cpp  cdn.h  region.cpp  region.h  service_provider.cpp  service_provider.h  sub_game.cpp  sub_game.h
src/tools/: string.h  time.h  types.h  vector.h
